# OgreExperimentations

./: .gitignore  .gitmodules  CMakeLists.txt  Cube.mesh.xml  Icosphere.mesh  Icosphere.mesh.xml  Makefile  Material.001.material  Material.material  OgreB.sln  README.md  RigidSimul.cpp  Rook.cpp  Rook.h  cmake_install.cmake  compile_commands.json  copyres.ps1  copyres.sh  cube.scene  hellob.cpp  prepareBuild.sh  rigidSimul  rigidSimul.cpp  sln.ps1  sphere.scene  where.txt
resources/: Material.material  basicVertex.glsl  bishop.mesh  blackMonochromeOrderedFragment.glsl  bypassVertex.glsl  darkBishop.mesh  darkKing.mesh  darkMonochromeOrderedFragment.glsl  flatFragment.glsl  king.mesh  knight.mesh  monochromeOrderedFragment.glsl  pawn.mesh  queen.mesh  redFragment.glsl  rook.mesh  smoothFragment.glsl
resources/Chessboard/: Chessboard.mtl  Cube.001.mesh  Cylinder.001.mesh  Cylinder.008.mesh  Cylinder.012.mesh  Glass.material  Sphere.003.mesh  Sphere.004.mesh
resources/Chessboard/ogre/: bishop.mesh  bishop.scene  black_chess.material  green.material  king.mesh  knight.mesh  pawn.mesh  queen.mesh  rook.mesh
resources/msvcdebugcfg/: plugins.cfg
resources/msvcreleasecfg/: plugins.cfg  resources.cfg
resources/peppermintcfg/: plugins.cfg  resources.cfg
